--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ loader_version=0.16.9
 
 # Mod Properties
 mod_version=0.0.1
-maven_group=com.example
+maven_group=com.milky
 archives_base_name=milkymod
 
 # Dependencies
