--- a/gradle.properties
+++ b/gradle.properties
@@ -1,28 +1,28 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties (https://fabricmc.net/develop)
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.7
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=0.0.3.3
-maven_group=com.milky
-archives_base_name=milkymod
+mod_version=0.15.9
+maven_group=com.example
+archives_base_name=jefff-mod
 
 # Dependencies
 
 # Meteor (https://maven.meteordev.org)
-meteor_version=1.21.4-SNAPSHOT
+meteor_version=0.5.8-SNAPSHOT
 
 # Baritone (https://maven.meteordev.org)
-baritone_version=1.21.4-SNAPSHOT
+baritone_version=1.21.1-SNAPSHOT
 
 # XaeroPlus
-xaeroplus_version=2.25.1+fabric-1.21.4
+xaeroplus_version=2.27.0+fabric-1.21.1
 
 # XaeroWorldmap
-xaeros_worldmap_version=1.39.2_Fabric_1.21.4
+xaeros_worldmap_version=1.39.2_Fabric_1.21
 
 # XaeroMinimap
-xaeros_minimap_version=25.0.0_Fabric_1.21.4
+xaeros_minimap_version=25.0.0_Fabric_1.21
