--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ yarn_mappings=1.21+build.9
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=0.15.9
-maven_group=com.example
-archives_base_name=jefff-mod
+mod_version=0.0.3.3
+maven_group=com.milky
+archives_base_name=milkymod
 
 # Dependencies
 
