--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ yarn_mappings=1.21.4+build.7
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=0.0.4.5
+mod_version=0.0.4.6-1.21.4
 maven_group=com.milky
 archives_base_name=milkymod
 
